@@ -1,4 +1,5 @@
 0.07
+ - Add $options_hr return value to clean_date(). Implment circa date.
 
 0.06 2023-11-20T14:16:34+01:00
  - Rewrite to use of MARC::Leader.
